# pytest-bokeh-regressions

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
pytest_bokeh_regressions/: __init__.py  json_comparison.py  plugin.py
tests/: conftest.py  test_bokeh_versioning.py  test_json_comparison.py
tests/test_json_comparison/: test_array.yml  test_array_fp_precision.yml  test_array_fp_precision_v2.yml  test_array_v2.yml  test_example.yml  test_example_v2.yml  test_fp_precision.yml  test_fp_precision_v2.yml
